# smart-inquiry-ai

./: .gitignore  CHANGELOG.md  PRODUCT.md  README.md  ROADMAP.md  TODO.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260721_0001_create_initial_inquiry_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: inquiries.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/models/: __init__.py  customer.py  enums.py  inquiry.py  notification.py
backend/app/repositories/: customer.py  inquiry.py
backend/app/schemas/: __init__.py  common.py  customer.py  error.py  inquiry.py  notification.py
backend/app/services/: inquiry.py
backend/tests/: test_error_handlers.py  test_health.py  test_inquiry_endpoint.py  test_inquiry_service.py  test_migration_metadata.py  test_models.py  test_schemas.py
docs/: MVP_SCOPE.md  README.md
docs/api/: API_CONTRACT.md  ERROR_FORMAT.md
docs/architecture/: ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/database/: DATABASE_SCHEMA.md  ER_DIAGRAM.md
docs/decisions/: DECISIONS.md
docs/domain/: DOMAIN_MODEL.md  GLOSSARY.md
planning/: Sprint-01.md
planning/daily/: Day-03.md
